# truth-chat-ai

./: .gitignore  README.md  index.html  tailwind.config.ts
backend/: example_news.md  fake_news_detection.py  main.py  model.pkl  pipeline.pkl  pyproject.toml  vectorizer.pkl  xai_fake_news_detection.ipynb
backend/templates/: index.html
src/: index.css
src/components/: ChatInput.tsx  ChatInterface.tsx  MessageBubble.tsx
src/pages/: Index.tsx
