[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "flask~=2.3.3",
    "scikit-learn~=1.3.2",
    "pandas~=2.1.1",
    "numpy~=1.26.0",
    "lime~=0.2.0.1",
    "matplotlib~=3.8.0",
    "seaborn~=0.13.0",
    "nltk~=3.8.1",
    "flask-core>=2.9.0",
    "flask-cors>=6.0.1",
]
